# Datalake-as-a-Service

./: .gitignore  Dockerfile  README.md  pyproject.toml
deploy/examples/: full-readwrite.yaml  minimal-readonly.yaml  streaming-ingest.yaml
deploy/helm/dlsidecar/: Chart.yaml  values.yaml
deploy/helm/dlsidecar/templates/: configmap.yaml  external-secret.yaml  networkpolicy.yaml  pdb.yaml  secret-template.yaml  serviceaccount-irsa.yaml  sidecar-patch.yaml
docs/scenarios/: 01-why-sidecar.md  02-cost-model.md  03-governance.md  04-data-flow.md  05-onboarding.md  06-iceberg-lifecycle.md  07-federation-architecture.md  08-health-check-guide.md
src/dlsidecar/: config.py  main.py
src/dlsidecar/api/: catalog.py  health.py  healthcheck.py  iceberg.py  metrics.py  push.py  query.py  sources.py  stream.py
src/dlsidecar/auth/: client.py  jwt_manager.py
src/dlsidecar/connections/: registry.py
src/dlsidecar/engine/: cache.py  duckdb_engine.py  query_router.py  scale_router.py
src/dlsidecar/flight/: server.py
src/dlsidecar/governance/: audit.py  metrics.py  row_filter.py
src/dlsidecar/healthcheck/: preflight.py
src/dlsidecar/iceberg/: health.py  maintenance.py  manager.py  reader.py
src/dlsidecar/onboarding/: egress_generator.py  promoter.py  ui.py  validator.py
src/dlsidecar/quality/: assertions.py  profiler.py
src/dlsidecar/sources/: azure.py  base.py  databricks.py  delta.py  external_lake.py  gcs.py  hms.py  mongo.py  mysql.py  postgres.py  s3.py  snowflake.py  starburst.py
src/dlsidecar/streaming/: ingest.py  kafka_bridge.py
tests/: test_api.py  test_governance.py  test_healthcheck.py  test_iceberg_maintenance.py  test_iceberg_manager.py  test_onboarding.py  test_query_router.py  test_starburst.py
